--- a/tox.ini
+++ b/tox.ini
@@ -136,3 +136,13 @@ commands =
     pip-compile --extra dev --output-file {toxinidir}/requirements/dev.txt
 skip_install = true
 deps = pip-tools
+
+[testenv:markslow]
+deps =
+    -r{toxinidir}/requirements/base.txt
+    pytest
+    pytest-json-report
+    redbaron
+commands =
+    pytest tests --json-report --json-report-file {toxinidir}/test-report.json --json-report-omit collectors log traceback streams warnings
+    python {toxinidir}/src/scripts/automation/mark_slow_tests.py --json-test-report-path test-report.json
