Update tests to work with Pytest v8 (#1275)

--- a/tox.ini
+++ b/tox.ini
@@ -27,9 +27,7 @@ passenv =
 usedevelop = false
 deps =
     -r{toxinidir}/requirements/base.txt
-    ; Pin pytest version as some tests use features deprecated in v8
-    ; See https://github.com/UCL/TLOmodel/issues/1264
-    pytest==7.4.4
+    pytest
     pytest-cov
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
@@ -40,9 +38,7 @@ deps =
     pandas15: pandas==1.5.3
     pandas20: pandas==2.0.0
     pandas21: pandas==2.1.0
-    ; Pin pytest version as some tests use features deprecated in v8
-    ; See https://github.com/UCL/TLOmodel/issues/1264
-    pytest==7.4.4
+    pytest
     pytest-cov
 
 [testenv:spell]
