Add scheduled workflow to run tests with unpinned dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,13 @@ deps =
     pytest
     pytest-cov
 
+[testenv:py3-latest]
+deps =
+    pytest
+    pytest-xdist
+commands =
+    {posargs:pytest -n auto -vv tests}
+
 [testenv:spell]
 setenv =
     SPELLCHECK=1
