--- a/.github/workflows/tests-unpinned.yml
+++ b/.github/workflows/tests-unpinned.yml
@@ -9,7 +9,7 @@ jobs:
     name: Run tests
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.x]
       fail-fast: false
     runs-on: ${{ matrix.os }}
