Skip slow tests in unpinned tests workflow

--- a/.github/workflows/tests-unpinned.yml
+++ b/.github/workflows/tests-unpinned.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Install tox
         run: python -m pip install tox
       - name: Run tests
-        run: tox -v -e py3-latest
+        run: tox -v -e py3-latest -- pytest -n auto -vv tests --skip-slow
