--- a/.github/workflows/run-profiling.yaml
+++ b/.github/workflows/run-profiling.yaml
@@ -82,7 +82,7 @@ jobs:
     needs: set-variables
     uses: ./.github/workflows/run-on-comment.yml
     with:
-      runs-on: '["self-hosted", "test"]'
+      runs-on: '["self-hosted", "profiling"]'
       keyword: profiling
       commands: |
         tox -vv -e profile -- \
@@ -108,7 +108,7 @@ jobs:
     name: Scheduled / dispatch triggered profiling
     if: ${{ github.event_name != 'issue_comment' }}
     needs: set-variables
-    runs-on: [self-hosted, test]
+    runs-on: [self-hosted, profiling]
     timeout-minutes: 8640
     steps:
       - name: Checkout repository
