[CI] Run test job with long wait

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,4 +10,7 @@ jobs:
     steps:
       - name: Test
         run: |
+          date
           echo "Hello world"
+          sleep 7200 # 2 hours
+          date
