[CI] Use longer timeout

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,6 +7,7 @@ jobs:
   test:
     name: Test job
     runs-on: ["self-hosted", "profiling"]
+    timeout-minutes: 1080 # 18 hours
     steps:
       - name: Test
         run: |
