--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,6 +33,7 @@ jobs:
         uses: catchpoint/workflow-telemetry-action@v2
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 30
       - name: Test
         timeout-minutes: 3
         shell: python3 {0}
