--- a/.github/workflows/calibrations_common.yaml
+++ b/.github/workflows/calibrations_common.yaml
@@ -8,8 +8,8 @@ on:
         required: true
         default: ''
         type: string
-      model:
-        description: 'Model'
+      hs_mode:
+        description: 'Healthsystem mode'
         required: true
         default: ''
         type: string
@@ -20,22 +20,22 @@ on:
         required: true
         default: ''
         type: string
-      model:
-        description: 'Model'
+      hs_mode:
+        description: 'Healthsystem mode'
         required: true
         default: ''
         type: choice
         options:
-        - 'mode1'
-        - 'mode2'
+        - '1'
+        - '2'
 
 env:
-  REPO_PATH:       /mnt/tlo/TLOmodel
+  REPO_PATH:       /mnt/tlo/TLOmodel-mode${{ inputs.hs_mode }}
   OUTPUT_ROOT:     /mnt/tlodev2stg/tlo-dev-fs-2/task-runner/output
   RUNS_NUMBER:     10
   PYTHON_VER:      3.11
-  RUN_NAME:        021_long_run_all_diseases_${{ inputs.model }}_run
-  PROCESS_NAME:    022_long_run_all_diseases_${{ inputs.model }}_process
+  RUN_NAME:        021_long_run_all_diseases_mode${{ inputs.hs_mode }}_run
+  PROCESS_NAME:    022_long_run_all_diseases_mode${{ inputs.hs_mode }}_process
 
 jobs:
 
@@ -62,12 +62,12 @@ jobs:
         id: vars
         run: |
           SHA=${{ inputs.commit }}
-          ENV="/mnt/tlo/env-${{ inputs.model }}-${SHA}"
+          ENV="/mnt/tlo/env-healthsystem-mode${{ inputs.hs_mode }}-${SHA}"
           if [[ -d "${ENV}" ]]; then
               echo "Virtual environment directory ${ENV} already exists, leaving..."
               exit 1
           fi
-          WORKTREE_PATH="/mnt/tlo/${{ inputs.model }}-${SHA}"
+          WORKTREE_PATH="/mnt/tlo/healthsystem-mode${{ inputs.hs_mode }}-${SHA}"
           if [[ -d "${WORKTREE_PATH}" ]]; then
               echo "Worktree directory ${WORKTREE_PATH} already exists, leaving..."
               exit 1
@@ -116,8 +116,9 @@ jobs:
         id: tasks
         run: |
           SKIP_TASKS="false"
-          if [[ -d "${output_dir}" ]]; then
-              echo "Output directory ${output_dir} already exists, setting RUNS_NUMBER to 1 and skipping further task runs"
+          output_dir_run_name="${output_dir}/${RUN_NAME}"
+          if [[ -d "${output_dir_run_name}" ]]; then
+              echo "Output directory ${output_dir_run_name} already exists, setting RUNS_NUMBER to 1 and skipping further task runs"
               RUNS_NUMBER=1
               # Set variable to make task job run, but exit immediately, so that
               # the build doesn't fail.
@@ -148,7 +149,7 @@ jobs:
   tasks:
     needs: setup
     name: Run task ${{ matrix.index }}
-    runs-on: [tlo-dev-vm-3, tasks, ${{ inputs.model }}] # Use only runners dedicated to running the tasks.
+    runs-on: [tlo-dev-vm-3, tasks, 'healthsystem-mode-${{ inputs.hs_mode }}'] # Use only runners dedicated to running the tasks.
     timeout-minutes: 5760 # = 4 * 24 * 60 minutes = 4 days
     strategy:
       fail-fast: false
@@ -166,7 +167,7 @@ jobs:
           task_output_dir="${{ needs.setup.outputs.output_dir }}/${RUN_NAME}/${draw}/${{ matrix.index }}"
           mkdir -p "${task_output_dir}"
 
-          tlo scenario-run --output-dir "${task_output_dir}" --draw "${draw}" ${{ matrix.index }} "${{ needs.setup.outputs.worktree_path }}/src/scripts/calibration_analyses/scenarios/long_run_all_diseases.py"
+          tlo scenario-run --output-dir "${task_output_dir}" --draw "${draw}" ${{ matrix.index }} "${{ needs.setup.outputs.worktree_path }}/src/scripts/calibration_analyses/scenarios/long_run_all_diseases.py" --healthsystem-mode ${{ inputs.hs_mode }}
         working-directory: "${{ needs.setup.outputs.worktree_path }}"
 
   # Do the postprocessing
