--- a/.github/workflows/calibrations.yaml
+++ b/.github/workflows/calibrations.yaml
@@ -3,6 +3,8 @@ name: "Calibrations (nightly)"
 on:
   schedule:
     - cron: 31 2 * * *
+  pull_request:
+    branches: "master"
 
 jobs:
   version-matrix:
