[batch] Use `earlyoom` to terminate a process using too much memory
Linux's built-in system to manage out-of-memory (OOM) errors is unreliable and
non-informative, even if it kicks in (and if often it does too late, when the
machine is already unresponsive) there's no easy way to tell that a process on a
remote machine was terminated because it was using too much memory.  With
`earlyoom` we bypass Linux's OOM management and have better control over what's
printed to screen in case of error.

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,15 +1,9 @@
 FROM python:3.11-slim-bookworm
 
-# Setup SSH
-RUN mkdir /root/.ssh
-COPY id_ed25519 /root/.ssh/id_ed25519
-COPY known_hosts /root/.ssh/known_hosts
-RUN chmod -R 0600 /root/.ssh
-
 # Install Git, Git LFS.  How to silence apt-get commands:
 # https://peteris.rocks/blog/quiet-and-unattended-installation-with-apt-get/
 RUN apt-get update -qq
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -qq -y git git-lfs < /dev/null > /dev/null
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -qq -y git git-lfs earlyoom < /dev/null > /dev/null
 # Cleanup apt cache
 RUN rm -rf /var/lib/apt/lists/*
 # Configure git lfs
@@ -17,7 +11,7 @@ RUN git lfs install
 
 # Clone the TLOModel repository and move in it
 ARG BRANCH_NAME="master"
-RUN git clone --branch "${BRANCH_NAME}" git@github.com:UCL/TLOmodel.git /TLOmodel
+RUN git clone --branch "${BRANCH_NAME}" https://github.com/UCL/TLOmodel.git /TLOmodel
 WORKDIR /TLOmodel
 RUN git gc --aggressive
 
