add Dominic to contributors.yaml

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -279,5 +279,5 @@
   orcid: "https://orcid.org/0000-0001-6125-6630"
   contributions:
       - Policy translation
-  website: https://mw.linkedin.com/in/dominicnkhoma1978
+  website: "https://mw.linkedin.com/in/dominicnkhoma1978"
 
