add Gerald to contributors.yaml

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -280,4 +280,9 @@
   contributions:
       - Policy translation
   website: "https://mw.linkedin.com/in/dominicnkhoma1978"
-
+- given-names: Gerald
+  family-names: Manthalu
+  affiliation: "Department of Planning and Policy Development, Ministry of Health and Population, Lilongwe, Malawi"
+  orcid: "https://orcid.org/0000-0002-3501-8601"
+  contributions:
+      - Policy translation
