--- a/contributors.yaml
+++ b/contributors.yaml
@@ -288,7 +288,7 @@
       - Policy translation
 - given-names: Rachel
   family-names: Murray-Watson
-  affiliation: ""Imperial College London""
+  affiliation: "Imperial College London"
   orcid: https://orcid.org/0000-0001-9079-5975
   github-username: RachelMurray-Watson
   contributions:
