add Victor to contributors.yaml

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -294,3 +294,11 @@
   contributions:
     - Epidemiology and modelling
     - Software development
+- given-names: Victor
+  family-names: Mapwasa
+  orcid: "https://orcid.org/0000-0002-2748-8902"
+  affiliation: "Kamuzu University of Health Sciences"
+  website: "https://www.kuhes.ac.mw/prof-victor-mwapasa/"
+  contributions:
+    - Clinical consultant
+    - Epidemiology and modelling
