--- a/contributors.yaml
+++ b/contributors.yaml
@@ -295,7 +295,7 @@
     - Epidemiology and modelling
     - Software development
 - given-names: Victor
-  family-names: Mapwasa
+  family-names: Mwapasa
   orcid: "https://orcid.org/0000-0002-2748-8902"
   affiliation: "Kamuzu University of Health Sciences"
   website: "https://www.kuhes.ac.mw/prof-victor-mwapasa/"
