--- a/contributors.yaml
+++ b/contributors.yaml
@@ -204,7 +204,7 @@
   affiliation: University College London
   website: "https://profiles.ucl.ac.uk/954"
   contributions:
-    - Clinical Process Modelling
+    - Clinical process modelling
 - given-names: Paul
   family-names: Revill
   orcid: "https://orcid.org/0000-0001-8632-0600"
@@ -297,4 +297,4 @@
   affiliation: "Kamuzu University of Health Sciences"
   website: "https://www.kuhes.ac.mw/prof-victor-mwapasa/"
   contributions:
-    - Clinical Process Modelling
+    - Clinical process modelling
