Add software development to entry so it shows up in CITATION.cff

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -103,6 +103,7 @@
   github-username: sakshimohan
   contributions:
     - Health economics
+    - Software development
 - given-names: Wingston
   family-names: Ng'ambi
   orcid: "https://orcid.org/0000-0003-3967-905X"
