Generate parameters list page as part of docs

--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,8 @@ commands =
     ; Generate HSI events listing
     python src/tlo/analysis/hsi_events.py --output-file docs/_hsi_events.rst --output-format rst-list
     python src/tlo/analysis/hsi_events.py --output-file docs/hsi_events.csv --output-format csv
+    ; Generate parameters listing
+    python docs/tlo_parameters.py {toxinidir}{/}resources {toxinidir}{/}docs{/}parameters.rst
     sphinx-build {posargs:-E} -b html docs dist/docs
     -sphinx-build -b linkcheck docs dist/docs
 
