Hack to make only determinism test run

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,8 @@ on:
       - requirements/**
       - resources/**
       - src/tlo/**
+      - src/scripts/profiling/scale_run.py
+      - src/scripts/profiling/shared.py
       - tests/**
       - pyproject.toml
       - tox.ini
@@ -46,7 +48,7 @@ jobs:
           set -e
           # Find all test files and generate their list in JSON format
           VAR_FILES="{\"include\":["
-          for file in tests/test_*.py; do
+          for file in tests/test_det*.py; do
               VAR_FILES="${VAR_FILES}{\"file\":\"${file}\"},"
           done
           VAR_FILES="${VAR_FILES}]}"
@@ -75,7 +77,7 @@ jobs:
           tox --version
       - name: Test with tox
         run: |
-          tox -v -e py311 -- pytest --show-capture=no -vv "${{ matrix.file }}" --junit-xml="${{ matrix.file }}.results.xml"
+          tox -v -e py311 -- pytest -vv "${{ matrix.file }}" --junit-xml="${{ matrix.file }}.results.xml"
       - name: Generate test report
         if: always()
         uses: pmeier/pytest-results-action@fc6576eced1f411ea48ab10e917d9cfce2960e29
