--- a/contributors.yaml
+++ b/contributors.yaml
@@ -195,6 +195,7 @@
   family-names: Janoušková
   orcid: "https://orcid.org/0000-0002-4104-0119"
   affiliation: "University College London"
+  website: "https://profiles.ucl.ac.uk/90260"
   github-username: EvaJanouskova
   contributions:
     - Epidemiology and modelling
