Generate publications list from BibTeX file

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,8 @@ commands =
     python docs/tlo_data_sources.py
     ; Generate contributors page
     python docs/tlo_contributors.py
+    ; Generate publications page
+    python docs/tlo_publications.py
     ; Generate resources files page
     python docs/tlo_resources.py
     ; Generate HSI events listing
@@ -80,7 +82,7 @@ commands =
     python src/tlo/analysis/hsi_events.py --output-file docs/hsi_events.csv --output-format csv
     ; Generate parameters listing
     python docs/tlo_parameters.py {toxinidir}{/}resources {toxinidir}{/}docs{/}parameters.rst
-    sphinx-build {posargs:-E} -b html docs dist/docs
+        
     -sphinx-build -b linkcheck docs dist/docs
 
 [testenv:check]
