Add tox environment for updating publications

--- a/tox.ini
+++ b/tox.ini
@@ -141,6 +141,13 @@ commands = python {toxinidir}/src/scripts/automation/update_citation.py
 skip_install = true
 deps = pyyaml
 
+[testenv:update-publications]
+commands = python {toxinidir}/docs/tlo_publications.py --update-from-zotero
+skip_install = true
+deps =
+    pybtex
+    requests
+
 [testenv:requirements]
 commands =
     pip-compile --output-file {toxinidir}/requirements/base.txt
