Generate publications list from BibTeX file (#1507)
* Generate publications list from BibTeX file

* Add help strings to arguments and tidy up interface

* Warn when entry does not have note with valid section name

* Add pybtex to docs requirements

* Add docstrings

* Ignore generated publications list doc file

* Use keywords rather than note field for section

* Add title as additional sort key to break ties

* Allow updating BibTeX file from Zotero at command line

* Add requests to documentation requirements

* Add link to download BibTeX file

* Expandable publication list entries with additional details

* Format publication details as table

* Add tox environment for updating publications

* Revert accidental deletion of sphinx-build command in tox

* Strip trailing whitespace

* Show defaults in script help and normalize arg name

* Adding Healthcare provision section to publication list

* Updating publication data from Zotero

* Add published version of overview paper and remove pre-print from list

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,8 @@ commands =
     python docs/tlo_data_sources.py
     ; Generate contributors page
     python docs/tlo_contributors.py
+    ; Generate publications page
+    python docs/tlo_publications.py
     ; Generate resources files page
     python docs/tlo_resources.py
     ; Generate HSI events listing
@@ -138,6 +140,13 @@ deps = coverage
 commands = python {toxinidir}/src/scripts/automation/update_citation.py
 skip_install = true
 deps = pyyaml
+
+[testenv:update-publications]
+commands = python {toxinidir}/docs/tlo_publications.py --update-from-zotero
+skip_install = true
+deps =
+    pybtex
+    requests
 
 [testenv:requirements]
 commands =
