--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ deps =
     ; require setuptools_scm for getting version info
     setuptools_scm
 commands =
-    sphinx-apidoc -e -f -o {toxinidir}/docs/reference {toxinidir}/src/tlo
+    sphinx-apidoc -e -o {toxinidir}/docs/reference {toxinidir}/src/tlo
     ; Generate API documentation for TLO methods
     python docs/tlo_methods_rst.py
     ; Generate data sources page
