--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ deps =
     ; require setuptools_scm for getting version info
     setuptools_scm
 commands =
-    sphinx-apidoc -e -f -o {toxinidir}/docs/reference {toxinidir}/src/tlo
+    sphinx-apidoc -e -o {toxinidir}/docs/reference {toxinidir}/src/tlo
     ; Generate API documentation for TLO methods
     python docs/tlo_methods_rst.py
     ; Generate data sources page
@@ -82,8 +82,7 @@ commands =
     python src/tlo/analysis/hsi_events.py --output-file docs/hsi_events.csv --output-format csv
     ; Generate parameters listing
     python docs/tlo_parameters.py {toxinidir}{/}resources {toxinidir}{/}docs{/}parameters.rst
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    -sphinx-build -b linkcheck docs dist/docs
+    sphinx-build -b html docs dist/docs
 
 [testenv:check]
 deps =
