--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 *.pickle filter=lfs diff=lfs merge=lfs -text
 resources/** filter=lfs diff=lfs merge=lfs -text
+best_model_monthly_total_precip.pkl filter=lfs diff=lfs merge=lfs -text
