--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,3 +127,4 @@ where = ["src"]
 
 [tool.setuptools_scm]
 version_file  = "src/tlo/_version.py"
+git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", 'v[0-9]*']
